added new fields in company, fixed put user account
