# docs/swagger.json
@@ -322,6 +322,11 @@
                 "responses": {}
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete company",
                 "consumes": [
                     "application/json"
@@ -1039,7 +1044,10 @@
         "dtos.CreateCompanyDto": {
             "type": "object",
             "required": [
-                "name"
+                "email",
+                "inn",
+                "name",
+                "phone"
             ],
             "properties": {
                 "avatar": {
@@ -1051,10 +1059,22 @@
                 "description": {
                     "type": "string"
                 },
+                "email": {
+                    "type": "string"
+                },
+                "inn": {
+                    "type": "string"
+                },
+                "manager_telegram": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string",
                     "maxLength": 100,
                     "minLength": 1
+                },
+                "phone": {
+                    "type": "string"
                 }
             }
         },
@@ -1200,27 +1220,19 @@
                     }
                 },
                 "first_name": {
-                    "type": "string",
-                    "maxLength": 50
+                    "type": "string"
                 },
                 "new_password": {
-                    "type": "string",
-                    "maxLength": 32,
-                    "minLength": 3
+                    "type": "string"
                 },
                 "old_password": {
-                    "type": "string",
-                    "maxLength": 32,
-                    "minLength": 3
+                    "type": "string"
                 },
                 "second_name": {
-                    "type": "string",
-                    "maxLength": 50
+                    "type": "string"
                 },
                 "username": {
-                    "type": "string",
-                    "maxLength": 32,
-                    "minLength": 3
+                    "type": "string"
                 }
             }
         },
